--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-sass": "^3.1.0"
   }
 }
