--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "bootstrap": "^4.0.0",
     "browser-sync": "^2.23.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
